Graphikfehler noch nicht  behoben