@@ -4,9 +4,23 @@
     <groupId>org.costr.railroad-ink</groupId>
     <artifactId>Railroad-Ink</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <exec.mainClass>org.costr.railroad-ink.RailroadInk</exec.mainClass>
+        <exec.mainClass>org.costr.railroad_ink.GUI1</exec.mainClass>
     </properties>
 </project>
